--- a/faux-typey-type-data/lessons/drills/fingerspelling-pangram-mr-jock-tv-quiz-phd-bags-few-lynx/fingerspelling-pangram-mr-jock-tv-quiz-phd-bags-few-lynx.json
+++ b/faux-typey-type-data/lessons/drills/fingerspelling-pangram-mr-jock-tv-quiz-phd-bags-few-lynx/fingerspelling-pangram-mr-jock-tv-quiz-phd-bags-few-lynx.json
@@ -1,30 +1,30 @@
 {
-"PH*P": "M",
-"R*": "r",
-"S-P": " ",
-"SKWR*P": "J",
-"O*": "o",
-"KR*": "c",
-"K*": "k",
-"KW-BG": ",",
-"T*P": "T",
-"5R": "V",
-"KW*": "q",
-"*U": "u",
-"*EU": "i",
-"STKPW*": "z",
-"P*P": "P",
-"H*": "h",
-"TK*P": "D",
-"PW*": "b",
-"AEU": "a",
-"TKPW*": "g",
-"S*": "s",
-"TP*": "f",
-"*E": "e",
-"W*": "w",
-"HR*": "l",
-"KWR*": "y",
-"TPH*": "n",
-"KP*": "x"
+"PH*P": "{&M}",
+"R*": "{>}{&r}",
+"S-P": "{^ ^}",
+"SKWR*P": "{&J}",
+"O*": "{>}{&o}",
+"KR*": "{>}{&c}",
+"K*": "{>}{&k}",
+"KW-BG": "{,}",
+"T*P": "{&T}",
+"SR*P": "{&V}",
+"KW*": "{>}{&q}",
+"*U": "{>}{&u}",
+"*EU": "{>}{&i}",
+"STKPW*": "{>}{&z}",
+"P*P": "{&P}",
+"H*": "{>}{&h}",
+"TK*P": "{&D}",
+"PW*": "{>}{&b}",
+"A*": "{>}{&a}",
+"TKPW*": "{>}{&g}",
+"S*": "{>}{&s}",
+"TP*": "{>}{&f}",
+"*E": "{>}{&e}",
+"W*": "{>}{&w}",
+"HR*": "{>}{&l}",
+"KWR*": "{>}{&y}",
+"TPH*": "{>}{&n}",
+"KP*": "{>}{&x}"
 }
