Update stroke for sword(s)

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
@@ -375,7 +375,7 @@
 "TWORBGS": "two,",
 "WAER": "wear",
 "KWRAOUFRPL": "uniform",
-"SOERD/TP-PL": "sword.",
+"SWORD/TP-PL": "sword.",
 "KW-GS/KPA*/AERBGS": "\"Ah,",
 "HRERPB": "learn",
 "TKRUPL/H-PB/SKEUPB/KW-BG": "drum-skin,",
