--- a/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
+++ b/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
@@ -157,8 +157,8 @@
 "TKO/TP-PL/KR-GS": "do.\"",
 "A*E/KPA*/TPHO/KW-BG": "'No,",
 "A*E/KPA*/TPHO/H-PB/TPHO/SKHRAPL/AE": "'No-no!'",
-"H*B/H-PB/KPA*/S": "--Is",
-"H*B/H-PB/KPA*/T": "--It",
+"PH*PBS/H-PB/KPA*/S": "--Is",
+"PH*PBS/H-PB/KPA*/T": "--It",
 "WHA/H-F/AE": "what?'",
 "WOPL/SKHRAPL": "woman!",
 "WOPL/TP-PL": "woman.",
@@ -332,9 +332,9 @@
 "KPA/PHEPB/TP-PL/PR*EPB": "Men.)",
 "HER/TP-PL/PR*EPB": "her.)",
 "HEUPL/TP-PL/PR*EPB": "him.)",
-"H*B/H-PB/KPA*/TPHOT": "--Not",
-"H*B/H-PB/KPA*/WAS": "--Was",
-"H*B/H-PB/KPA*/WHO": "--Who",
+"PH*PBS/H-PB/KPA*/TPHOT": "--Not",
+"PH*PBS/H-PB/KPA*/WAS": "--Was",
+"PH*PBS/H-PB/KPA*/WHO": "--Who",
 "HREUL/TP-PL": "little.",
 "WOPL/H-F/AE": "woman?'",
 "KPA/PW": "About",
@@ -510,13 +510,13 @@
 "THEPL/TP-PL/PR*EPB": "them.)",
 "TK-R/KR-GS/KPA*/TPH": "--\"In",
 "PHA*EU/H-F": "May?",
-"H*B/H-PB/KPA*/R": "--Are",
-"H*B/H-PB/KPA*/K": "--Can",
-"H*B/H-PB/KPA*/TK": "--Did",
-"H*B/H-PB/KPA*/TPR": "--From",
-"H*B/H-PB/KPA*/-F": "--Of",
-"H*B/H-PB/KPA*/THA": "--That",
-"H*B/H-PB/KPA*/U": "--You",
+"PH*PBS/H-PB/KPA*/R": "--Are",
+"PH*PBS/H-PB/KPA*/K": "--Can",
+"PH*PBS/H-PB/KPA*/TK": "--Did",
+"PH*PBS/H-PB/KPA*/TPR": "--From",
+"PH*PBS/H-PB/KPA*/-F": "--Of",
+"PH*PBS/H-PB/KPA*/THA": "--That",
+"PH*PBS/H-PB/KPA*/U": "--You",
 "TP-PL/KPA*/U": ".You",
 "KPA/AF": "After",
 "-F": "of",
@@ -691,9 +691,9 @@
 "TK-R": "--",
 "PHE/TP-PL/PR*EPB": "me.)",
 "TK-R/KR-GS/AFPBD": "--\"And",
-"H*B/H-PB/KPA*/HAS": "--Has",
+"PH*PBS/H-PB/KPA*/HAS": "--Has",
 "PW-PB/H-F": "been?",
-"H*B/H-PB/W*EUL": "--Will",
+"PH*PBS/H-PB/W*EUL": "--Will",
 "STPH-FPLT": ":",
 "TKPWAOD": "good",
 "US/H-F/AE": "us?'",
@@ -828,7 +828,7 @@
 "A*E/KPA*/OEPBL": "'Only",
 "PREPB/KPA*/HE": "(He",
 "WAS/TP-PL/PR*EPB": "was.)",
-"H*B/H-PB/KPA*/SRE": "--Very",
+"PH*PBS/H-PB/KPA*/SRE": "--Very",
 "TKPWRAET": "great",
 "WHA": "what",
 "TO/H-F": "to?",
@@ -894,12 +894,12 @@
 "KW-GS/KPA*/U/H-PB/H-PB/R/H-PB/H-PB/H-F/KR-GS": "\"You--are--?\"",
 "THEPL/SKHRAPL/AE": "them!'",
 "PWHRET/KPA*/TO": "*To",
-"H*B/H-PB/AFPBD": "--And",
-"H*B/H-PB/KPA*/TKO": "--Do",
-"H*B/H-PB/KPA*/THEPB": "--Then",
+"PH*PBS/H-PB/AFPBD": "--And",
+"PH*PBS/H-PB/KPA*/TKO": "--Do",
+"PH*PBS/H-PB/KPA*/THEPB": "--Then",
 "PW/SKHRAPL": "about!",
-"H*B/H-PB/KPA*/WHA": "--What",
-"H*B/H-PB/KPA*/WEU": "--Which",
+"PH*PBS/H-PB/KPA*/WHA": "--What",
+"PH*PBS/H-PB/KPA*/WEU": "--Which",
 "KPA/PW/KW-BG": "About,",
 "PHEPB/xxx": "men…",
 "AF": "after",
@@ -970,8 +970,8 @@
 "KW-GS/KPA*/WHO/H-PB/H-PB/WHO": "\"Who--who",
 "TPHOT/SKHRAPL/KR-GS": "not!\"",
 "TK-R/KR-GS/KPA*/PW-FR": "--\"Before",
-"H*B/H-PB/KPA*/TH": "--This",
-"H*B/H-PB/KPA*/TWO": "--Two",
+"PH*PBS/H-PB/KPA*/TH": "--This",
+"PH*PBS/H-PB/KPA*/TWO": "--Two",
 "KPA/WUPB/TP-PL": "One.",
 "HREUL": "little",
 "HER/H-PB/H-PB/TPHO/SKHRAPL": "her--no!",
@@ -989,7 +989,7 @@
 "KPA/PWUT/H-PB/H-PB/PWUT": "But--but",
 "KPA/PWUT/H-PB/H-PB/WHA": "But--what",
 "KPA/PWUT/H-PB/H-PB/WHO": "But--who",
-"H*B/H-F": "-?",
+"PH*PBS/H-F": "-?",
 "THE/KW-BG": "they,",
 "KPA/WEUPL/H-F": "Women?",
 "SHE/H-PB/H-PB/WHEPB/H-F/AE": "she--when?'",
@@ -1281,7 +1281,7 @@
 "SED/SKHRAPL/KR-GS": "said!\"",
 "A*E/KR-GS/KPA*/WHA": "'\"What",
 "TK-R/KR-GS/W*EUL": "--\"Will",
-"H*B/H-PB/KPA*/SHE": "--She",
+"PH*PBS/H-PB/KPA*/SHE": "--She",
 "TP-PL/KPA*/THA": ".That",
 "SHO/H-F": "should?",
 "T/H-PB/H-PB/TPHO/SKHRAPL": "it--no!",
@@ -1293,8 +1293,8 @@
 "KW-GS/AE/KPA*/THA": "\"'That",
 "HREUL/KW-BG": "little,",
 "PW-PB/H-PB/H-PB/H-F/KR-GS": "been--?\"",
-"H*B/H-PB/KPA*/TPHOU/KW-BG": "--Now,",
-"H*B/H-PB/KPA*/THR": "--There",
+"PH*PBS/H-PB/KPA*/TPHOU/KW-BG": "--Now,",
+"PH*PBS/H-PB/KPA*/THR": "--There",
 "PHAED/H-PB/H-PB/WHA/H-F": "made--what?",
 "TO/KW-BG": "to,",
 "WEUPL/KW-BG": "women,",
@@ -1303,7 +1303,7 @@
 "HERS/SKHRAPL": "hers!",
 "KPA/WEUPL": "Women",
 "PHR-FPLT": "Mr.",
-"H*B/H-PB/H-PB/TP-PL": "---.",
+"PH*PBS/H-PB/H-PB/TP-PL": "---.",
 "A*E/KPA*/WHO/KW-BG": "'Who,",
 "PW-PB/H-F/KR-GS": "been?\"",
 "SOPL/H-F/TP-PL/TP-PL/TP-PL/KR-GS": "some?...\"",
@@ -1317,11 +1317,11 @@
 "T/H-PB/H-PB/WHA": "it--what",
 "WEU/H-F/AE": "which?'",
 "HREUL/STPH*FPLT": "little;",
-"H*B/H-PB/SKHRAPL/KR-GS": "--!\"",
+"PH*PBS/H-PB/SKHRAPL/KR-GS": "--!\"",
 "HE/STPH*FPLT": "he;",
 "SO/STPH*FPLT": "so;",
 "HREUL/H-PB/H-PB/TPHOT": "little--not",
-"H*B/H-PB/KPA*/WE": "--We",
+"PH*PBS/H-PB/KPA*/WE": "--We",
 "U/H-PB/H-PB/WHA": "you--what",
 "THR/H-F/TP-PL/TP-PL/TP-PL": "there?...",
 "T/H-PB/H-PB/OEFR": "it--over",
