Reorder suffixes ^n and ^io
Defer ^n as a single-letter suffixes so that longer suffixes are
preferred and defer ^io so that ^ion is chosen ahead of it.

- Use SOL/O*PN instead of SO/HRO/*PB for sol ^on
- Use SKWREU/A*PB instead of KWRA*/*PB for ^i ^an
- Use A*PB instead of SKWRA/*PB for ^an
- Use SKWRO/O*PB instead SKWRAO/*PB for ^o ^on
- Use AEUGS instead of A*/T*/KWRO*E/*PB for ^ation
- Use O*PB instad of SKWRO/*PB for ^on

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
@@ -208,7 +208,7 @@
 "ROBGS/KW-BG": "rocks,",
 "WAULS": "walls",
 "TA*EPLS": "temples",
-"H*P/*EU/TPH*/TK*/O*/S*/T*/SKWRA/*PB/KW-BG": "Hindostan,",
+"H*P/*EU/TPH*/TK*/O*/S*/T*/A*PB/KW-BG": "Hindostan,",
 "PHAOEUT/KWREU": "mighty",
 "TKAOEDZ": "deeds",
 "TKPWRAET": "great",
