--- a/faux-typey-type-data/lessons/drills/top-10000-project-gutenberg-words/top-10000-project-gutenberg-words.json
+++ b/faux-typey-type-data/lessons/drills/top-10000-project-gutenberg-words/top-10000-project-gutenberg-words.json
@@ -4767,7 +4767,7 @@
 "APBLG/TAEUTD": "agitated",
 "PHAFRPB/-G": "marching",
 "KAFPG": "catching",
-"*E/HR*": "el",
+"HRO*ER/EL": "el",
 "TKPWRAS/-PD": "grasped",
 "RO*EUR": "arrow",
 "TEPBD": "tend",
