--- a/faux-typey-type-data/lessons/drills/top-10000-project-gutenberg-words/top-10000-project-gutenberg-words.json
+++ b/faux-typey-type-data/lessons/drills/top-10000-project-gutenberg-words/top-10000-project-gutenberg-words.json
@@ -8452,7 +8452,7 @@
 "STPHUR": "insure",
 "HRAEU/PWOUR/-D": "laboured",
 "KPAPBLG/RAEUGS": "exaggeration",
-"PH*/*EU": "mi",
+"PH*/SKWREU": "mi",
 "SHEP/ERDZ": "shepherds",
 "HREUL/KWREU/-S": "lilies",
 "PWAL/HRAD": "ballad",
