--- a/faux-typey-type-data/dictionaries/didoesdigital/top-10000-project-gutenberg-words.json
+++ b/faux-typey-type-data/dictionaries/didoesdigital/top-10000-project-gutenberg-words.json
@@ -9053,7 +9053,7 @@
 "TPEUFBG": "fiscal",
 "PH*/*EU/*E/TPH*": "mien",
 "KHARPBLG/-G": "charging",
-"KR*/O*/R*": "cor",
+"KO*R": "cor",
 "RAEULG": "railing",
 "PAOERZ": "peers",
 "TPH-FRD": "inferred",
@@ -9142,7 +9142,7 @@
 "RO*UT": "rout",
 "SKAERT": "scatter",
 "PWO/*ER": "Boer",
-"TP*P/T*P/P*P": "FTP",
+"TP-PT": "FTP",
 "STAOEF": "Steve",
 "EBGS/TAPBT": "extant",
 "PWOE/HAOEPL/KWRA": "Bohemia",
