Add affix: ["/*FT", "st"],

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-golden-treasure/the-golden-treasure.json
@@ -208,7 +208,7 @@
 "ROBGS/KW-BG": "rocks,",
 "WAULS": "walls",
 "TA*EPLS": "temples",
-"H*P/*EU/TPH*/TK*/O*/S*/T*/A*PB/KW-BG": "Hindostan,",
+"KPA/HAOEUPBD/SKWRO/*FT/A*PB/KW-BG": "Hindostan,",
 "PHAOEUT/KWREU": "mighty",
 "TKAOEDZ": "deeds",
 "TKPWRAET": "great",
