Add affix: ["SAUPB/", "sun"],

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snowdrop/the-snowdrop.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snowdrop/the-snowdrop.json
@@ -365,7 +365,7 @@
 "PHUFP": "much",
 "TKPWAOD/KW-BG": "good,",
 "HRAOEUBG": "like",
-"SUPB/PWAOEPL/-S/TP-PL": "sunbeams.",
+"SAUPB/PWAOEPLS/TP-PL": "sunbeams.",
 "KPA/TPH": "In",
 "WHEPB": "when",
 "PWROEPB": "broken",
