--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snowdrop/the-snowdrop.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snowdrop/the-snowdrop.json
@@ -430,7 +430,7 @@
 "PW*UBL/TP-PL": "bulb.",
 "WEPBT": "went",
 "SKWRURPB/KW-BG": "journey,",
-"POEFT/H-PB/PWAG/KW-BG": "post-bag,",
+"PO*EFT/PWAG/KW-BG": "post-bag,",
 "PREFD": "pressed",
 "KRURBD/KW-BG": "crushed,",
 "PHREFPBT/STPH*FPLT": "pleasant;",
