Add affixes: ["/AE", "'"], ["A*E/", "'"]

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snow-man/the-snow-man.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-snow-man/the-snow-man.json
@@ -581,7 +581,7 @@
 "PHEPB": "men",
 "STPHOE/KW-BG": "snow,",
 "S/TP-PL": "is.",
-"KW-GS/AE/AFPBD": "\"'And",
+"KW-GS/A*E/AFPBD": "\"'And",
 "KWR": "why",
 "HREF": "leave",
 "HER/H-F/KR-GS": "her?\"",
