Add affix: ["/HR-PS", "..."]

--- a/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
+++ b/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
@@ -357,7 +357,7 @@
 "OPB/SKHRAPL/AE": "on!'",
 "WUPB/H-F/AE": "one?'",
 "KPA/KO": "Could",
-"HE/TP-PL/TP-PL/TP-PL": "he...",
+"HE/HR-PS": "he...",
 "THE/H-F/AE": "they?'",
 "WE": "we",
 "KPA/TKPWAOD": "Good",
@@ -543,12 +543,12 @@
 "PWEU/SKHRAPL": "by!",
 "KPA/PWEU/H-PB/SKP/H-PB/PWEU/SKHRAPL": "By-and-by!",
 "-B/H-F": "be?",
-"PHE/H-F/TP-PL/TP-PL/TP-PL": "me?...",
+"PHE/H-F/HR-PS": "me?...",
 "KPA/TKPWAOD/KW-BG": "Good,",
 "TK": "did",
 "HAS": "has",
 "PHAEU": "may",
-"SED/TP-PL/TP-PL/TP-PL": "said...",
+"SED/HR-PS": "said...",
 "WAS": "was",
 "WO/SKHRAPL/AE": "would!'",
 "WO/TP-PL/AE": "would.'",
@@ -738,7 +738,7 @@
 "KPA/PHOR/KW-BG": "More,",
 "KPA/PHOR/SKHRAPL": "More!",
 "KPA/PHUFT/KW-BG": "Must,",
-"TPHOU/TP-PL/TP-PL/TP-PL/TP-PL": "now....",
+"TPHOU/TP-PL/HR-PS": "now....",
 "KPA/TPHO/H-PB/H-PB/TPHO/H-PB/H-PB/TPHO/SKHRAPL": "No--no--no!",
 "TPOR": "for",
 "THR/SKHRAPL/AE": "there!'",
@@ -779,7 +779,7 @@
 "U/H-PB/H-PB/H-F": "you--?",
 "THEPL/TP-PL/PWR*BGT": "them.]",
 "WEUPL/SKHRAPL": "women!",
-"SAOE/H-F/TP-PL/TP-PL/TP-PL": "see?...",
+"SAOE/H-F/HR-PS": "see?...",
 "WO/H-F/AE": "would?'",
 "TAOEUPL/TP-PL/AE": "time.'",
 "A*E/KPA*/SR": "'Have",
@@ -863,7 +863,7 @@
 "TPHEU": "any",
 "HER": "her",
 "PW/H-F/AE": "about?'",
-"PHEPB/SKHRAPL/TP-PL/TP-PL/TP-PL": "men!...",
+"PHEPB/SKHRAPL/HR-PS": "men!...",
 "PHAED": "made",
 "PWR-BG/KPA*/AS": "[As",
 "PW-FR/TP-PL/PWR*BGT": "before.]",
@@ -930,18 +930,18 @@
 "PW/TP-PL": "about.",
 "PHAPB": "man",
 "T/TP-PL/AE": "it.'",
-"SAOE/TP-PL/TP-PL/TP-PL": "see...",
+"SAOE/HR-PS": "see...",
 "SRE": "very",
 "HR-PS": "...",
 "HE/TP-PL/PWR*BGT": "he.]",
-"TPHOU/SKHRAPL/TP-PL/TP-PL/TP-PL": "now!...",
+"TPHOU/SKHRAPL/HR-PS": "now!...",
 "KPA/THR/H-PB/H-PB/THR/SKHRAPL": "There--there!",
 "OUT/TP-PL": "out.",
 "R/H-PB/H-PB/KPA*/TPHO/TP-PL": "are--No.",
 "THA/TP-PL/AE": "that.'",
 "PHUFP": "much",
-"THR/TP-PL/TP-PL/TP-PL/TP-PL": "there....",
-"THEPB/H-F/TP-PL/TP-PL/TP-PL": "then?...",
+"THR/TP-PL/HR-PS": "there....",
+"THEPB/H-F/HR-PS": "then?...",
 "TH/H-F/AE": "this?'",
 "KPA/WOPL/KW-BG": "Woman,",
 "KPA/WEUPL/KW-BG": "Women,",
@@ -961,7 +961,7 @@
 "PW/H-PB/H-PB/H-F/KR-GS": "about--?\"",
 "THEPL/TP-PL/KR-GS": "them.\"",
 "KW-GS/KPA*/WUPB/KW-BG": "\"One,",
-"TWO/SKHRAPL/TP-PL/TP-PL/TP-PL/KR-GS": "two!...\"",
+"TWO/SKHRAPL/HR-PS/KR-GS": "two!...\"",
 "T/H-PB/H-PB/H-F/KR-GS": "it--?\"",
 "TPHO*/TKPWAOD/SKHRAPL/KR-GS": "no-good!\"",
 "HRAOEUBG/H-F/KR-GS": "like?\"",
@@ -1012,7 +1012,7 @@
 "HER/TP-PL/AE": "her.'",
 "SAOERBGS": "see,",
 "THEPB/TP-PL/AE": "then.'",
-"THR/H-F/TP-PL/TP-PL/TP-PL/KR-GS": "there?...\"",
+"THR/H-F/HR-PS/KR-GS": "there?...\"",
 "WR/H-F/KR-GS": "were?\"",
 "TPHEU/H-F/KR-GS": "any?\"",
 "TPH/TP-PL/KR-GS": "in.\"",
@@ -1050,7 +1050,7 @@
 "THEPB/STPH*FPLT": "then;",
 "HEUPL/KW-BG": "him,",
 "WOPL/KW-BG": "woman,",
-"S/SKHRAPL/TP-PL/TP-PL/TP-PL": "is!...",
+"S/SKHRAPL/HR-PS": "is!...",
 "TKPWAOD/H-PB/PWEU/SKHRAPL": "good-by!",
 "KPA/THR/H-PB/H-PB/U": "There--you",
 "KPA/TPEUFRT/TP-PL": "First.",
@@ -1109,7 +1109,7 @@
 "THR/xxx": "there…",
 "HRAOEUBG/H-F": "like?",
 "TPHOT/KW-BG": "not,",
-"THA/TP-PL/TP-PL/TP-PL": "that...",
+"THA/HR-PS": "that...",
 "A*E/AFPBD": "'And",
 "A*E/KPA*/TPH": "'In",
 "KPA/PHEPB/H-F/KR-GS": "Men?\"",
@@ -1138,7 +1138,7 @@
 "AEU/H-PB/H-PB/STKPWHR-FPLT/SKW-TS": "a--!'",
 "PHAED/xxx": "made…",
 "S/H-PB/H-PB/H-PB/H-PB/SKHRAPL": "is----!",
-"R/TP-PL/TP-PL/TP-PL": "are...",
+"R/HR-PS": "are...",
 "KPA/THR/STPH*FPLT": "There;",
 "PHUFT/KW-BG": "must,",
 "H/H-F": "had?",
@@ -1265,7 +1265,7 @@
 "KW-GS/KPA*/THAPB": "\"Than",
 "KO/SKHRAPL/KR-GS": "could!\"",
 "THEPL/KW-BG": "them,",
-"PHUFT/TP-PL/TP-PL/TP-PL": "must...",
+"PHUFT/HR-PS": "must...",
 "TKO/H-F/KR-GS/AE": "do?\"'",
 "PWEU/H-PB/SKP/H-PB/PWEU/TP-PL/AE": "by-and-by.'",
 "KPA/TKPWAOD/STPH*FPLT": "Good;",
@@ -1306,7 +1306,7 @@
 "PH*PBS/H-PB/H-PB/TP-PL": "---.",
 "A*E/KPA*/WHO/KW-BG": "'Who,",
 "PW-PB/H-F/KR-GS": "been?\"",
-"SOPL/H-F/TP-PL/TP-PL/TP-PL/KR-GS": "some?...\"",
+"SOPL/H-F/HR-PS/KR-GS": "some?...\"",
 "TK/STPH*FPLT": "did;",
 "US/KW-BG": "us,",
 "SR/H-F/AE": "have?'",
@@ -1323,18 +1323,18 @@
 "HREUL/H-PB/H-PB/TPHOT": "little--not",
 "PH*PBS/H-PB/KPA*/WE": "--We",
 "U/H-PB/H-PB/WHA": "you--what",
-"THR/H-F/TP-PL/TP-PL/TP-PL": "there?...",
+"THR/H-F/HR-PS": "there?...",
 "T/H-PB/H-PB/OEFR": "it--over",
 "WR/H-PB/H-PB/SO": "were--so",
 "PWEU/H-PB/SKP/H-PB/PWEU/H-F": "by-and-by?",
 "TPHEU/SKHRAPL/KR-GS": "any!\"",
 "WOPL/H-PB/H-PB/WHO": "woman--who",
 "TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL/TP-PL": "...................A",
-"HEUPL/TP-PL/TP-PL/TP-PL/TP-PL": "him....",
+"HEUPL/TP-PL/HR-PS": "him....",
 "AF/xxx": "after…",
 "-B/H-PB/H-PB/THA": "be--that",
 "TKOUPB/H-F": "down?",
-"U/H-F/TP-PL/TP-PL/TP-PL": "you?...",
+"U/H-F/HR-PS": "you?...",
 "U/TP-PL/PWR*BGT": "you.]",
 "TKO/H-PB/H-PB/H-F/KR-GS": "do--?\"",
 "PHAPB/H-PB/H-PB/AEU": "man--a",
