Add affix: ["/*LD", "led"]
This change makes some hints less intuitive like WHEUR/*LD for "whirled"
and HAOE/*LD for "heeled", and TPUR/*LD for "furled", and A/*EU/*LD for
ailed, which all end in 'led'.

It makes more hints better for words ending in 'lled', like
TKEURB/EFL/*LD for "dishevelled".

--- a/faux-typey-type-data/lessons/stories/grimm/snowdrop/snowdrop.json
+++ b/faux-typey-type-data/lessons/stories/grimm/snowdrop/snowdrop.json
@@ -508,7 +508,7 @@
 "HREUFTD": "lifted",
 "UP/KW-BG": "up,",
 "TPOUPBD": "found",
-"AEUL/-D": "ailed",
+"A/*EU/*LD": "ailed",
 "KUT": "cut",
 "HRAEUS/STPH*FPLT": "lace;",
 "TAOEUPL": "time",
