Add affix: ["PO*EUP/", "."]

--- a/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
+++ b/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
@@ -618,7 +618,7 @@
 "A*E/KPA*/THR": "'There",
 "A*E/KPA*/THE": "'They",
 "A*E/KPA*/WE": "'We",
-"KW-GS/TP-PL/AFPBD": "\".And",
+"KW-GS/PO*EUP/AFPBD": "\".And",
 "HREUL/TP-PL/KR-GS": "little.\"",
 "HREUL/H-F/KR-GS": "little?\"",
 "KW-GS/KPA*/PW": "\"About",
