Generate affixes and update dict and lessons
The major changes to the affixes.json file are:

- deleting duplicate outlines for a given affix translation
- sorting the affixes
- a small number of new affixes due to automatic generation like
  ["H*PB/", "-"]
- a tiny number of deleted affixes like "oh", "of the naso"
- a small number of updated affixes like ["/O*UR", "our"] changed to
  ["/O*UR/A*U", "our"]

--- a/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-conceited-apple-branch/the-conceited-apple-branch.json
+++ b/faux-typey-type-data/lessons/stories/hans-christian-andersen/the-conceited-apple-branch/the-conceited-apple-branch.json
@@ -556,7 +556,7 @@
 "SAEUFL": "safely",
 "KOFRD/KW-BG": "covered,",
 "AR/OES": "arrows",
-"PHEUFT/SKWRAO*EUBG": "mist-like",
+"PHEUFT/SKWRAOEUBG": "mist-like",
 "SHAEUP": "shape",
 "HRAOEULT": "lightly",
 "TPORPLD/KW-BG": "formed,",
