--- a/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
+++ b/faux-typey-type-data/lessons/drills/project-gutenberg-sentences-using-top-100-words/project-gutenberg-sentences-using-top-100-words.json
@@ -157,8 +157,8 @@
 "TKO/TP-PL/KR-GS": "do.\"",
 "A*E/KPA*/TPHO/KW-BG": "'No,",
 "A*E/KPA*/TPHO/H-PB/TPHO/SKHRAPL/AE": "'No-no!'",
-"PH*PBS/H-PB/KPA*/S": "--Is",
-"PH*PBS/H-PB/KPA*/T": "--It",
+"H-PB/H-PB/KPA*/S": "--Is",
+"H-PB/H-PB/KPA*/T": "--It",
 "WHA/H-F/AE": "what?'",
 "WOPL/SKHRAPL": "woman!",
 "WOPL/TP-PL": "woman.",
@@ -332,9 +332,9 @@
 "KPA/PHEPB/TP-PL/PR*EPB": "Men.)",
 "HER/TP-PL/PR*EPB": "her.)",
 "HEUPL/TP-PL/PR*EPB": "him.)",
-"PH*PBS/H-PB/KPA*/TPHOT": "--Not",
-"PH*PBS/H-PB/KPA*/WAS": "--Was",
-"PH*PBS/H-PB/KPA*/WHO": "--Who",
+"H-PB/H-PB/KPA*/TPHOT": "--Not",
+"H-PB/H-PB/KPA*/WAS": "--Was",
+"H-PB/H-PB/KPA*/WHO": "--Who",
 "HREUL/TP-PL": "little.",
 "WOPL/H-F/AE": "woman?'",
 "KPA/PW": "About",
@@ -508,15 +508,15 @@
 "A*E/KPA*/U": "'You",
 "PHAEU/TP-PL/AE": "may.'",
 "THEPL/TP-PL/PR*EPB": "them.)",
-"TK-R/KR-GS/KPA*/TPH": "--\"In",
+"H-PB/H-PB/KR-GS/KPA*/TPH": "--\"In",
 "PHA*EU/H-F": "May?",
-"PH*PBS/H-PB/KPA*/R": "--Are",
-"PH*PBS/H-PB/KPA*/K": "--Can",
-"PH*PBS/H-PB/KPA*/TK": "--Did",
-"PH*PBS/H-PB/KPA*/TPR": "--From",
-"PH*PBS/H-PB/KPA*/-F": "--Of",
-"PH*PBS/H-PB/KPA*/THA": "--That",
-"PH*PBS/H-PB/KPA*/U": "--You",
+"H-PB/H-PB/KPA*/R": "--Are",
+"H-PB/H-PB/KPA*/K": "--Can",
+"H-PB/H-PB/KPA*/TK": "--Did",
+"H-PB/H-PB/KPA*/TPR": "--From",
+"H-PB/H-PB/KPA*/-F": "--Of",
+"H-PB/H-PB/KPA*/THA": "--That",
+"H-PB/H-PB/KPA*/U": "--You",
 "TP-PL/KPA*/U": ".You",
 "KPA/AF": "After",
 "-F": "of",
@@ -690,10 +690,10 @@
 "A*E/W*EUL": "'Will",
 "TK-R": "--",
 "PHE/TP-PL/PR*EPB": "me.)",
-"TK-R/KR-GS/AFPBD": "--\"And",
-"PH*PBS/H-PB/KPA*/HAS": "--Has",
+"H-PB/H-PB/KR-GS/AFPBD": "--\"And",
+"H-PB/H-PB/KPA*/HAS": "--Has",
 "PW-PB/H-F": "been?",
-"PH*PBS/H-PB/W*EUL": "--Will",
+"H-PB/H*PB/W*EUL": "--Will",
 "STPH-FPLT": ":",
 "TKPWAOD": "good",
 "US/H-F/AE": "us?'",
@@ -828,7 +828,7 @@
 "A*E/KPA*/OEPBL": "'Only",
 "PREPB/KPA*/HE": "(He",
 "WAS/TP-PL/PR*EPB": "was.)",
-"PH*PBS/H-PB/KPA*/SRE": "--Very",
+"H-PB/H-PB/KPA*/SRE": "--Very",
 "TKPWRAET": "great",
 "WHA": "what",
 "TO/H-F": "to?",
@@ -894,12 +894,12 @@
 "KW-GS/KPA*/U/H-PB/H-PB/R/H-PB/H-PB/H-F/KR-GS": "\"You--are--?\"",
 "THEPL/SKHRAPL/AE": "them!'",
 "PWHRET/KPA*/TO": "*To",
-"PH*PBS/H-PB/AFPBD": "--And",
-"PH*PBS/H-PB/KPA*/TKO": "--Do",
-"PH*PBS/H-PB/KPA*/THEPB": "--Then",
+"H-PB/H*PB/AFPBD": "--And",
+"H-PB/H-PB/KPA*/TKO": "--Do",
+"H-PB/H-PB/KPA*/THEPB": "--Then",
 "PW/SKHRAPL": "about!",
-"PH*PBS/H-PB/KPA*/WHA": "--What",
-"PH*PBS/H-PB/KPA*/WEU": "--Which",
+"H-PB/H-PB/KPA*/WHA": "--What",
+"H-PB/H-PB/KPA*/WEU": "--Which",
 "KPA/PW/KW-BG": "About,",
 "PHEPB/xxx": "men…",
 "AF": "after",
@@ -969,9 +969,9 @@
 "WAS/H-PB/H-PB/H-F/KR-GS": "was--?\"",
 "KW-GS/KPA*/WHO/H-PB/H-PB/WHO": "\"Who--who",
 "TPHOT/SKHRAPL/KR-GS": "not!\"",
-"TK-R/KR-GS/KPA*/PW-FR": "--\"Before",
-"PH*PBS/H-PB/KPA*/TH": "--This",
-"PH*PBS/H-PB/KPA*/TWO": "--Two",
+"H-PB/H-PB/KR-GS/KPA*/PW-FR": "--\"Before",
+"H-PB/H-PB/KPA*/TH": "--This",
+"H-PB/H-PB/KPA*/TWO": "--Two",
 "KPA/WUPB/TP-PL": "One.",
 "HREUL": "little",
 "HER/H-PB/H-PB/TPHO/SKHRAPL": "her--no!",
@@ -989,7 +989,7 @@
 "KPA/PWUT/H-PB/H-PB/PWUT": "But--but",
 "KPA/PWUT/H-PB/H-PB/WHA": "But--what",
 "KPA/PWUT/H-PB/H-PB/WHO": "But--who",
-"PH*PBS/H-F": "-?",
+"H-PB/H-F": "-?",
 "THE/KW-BG": "they,",
 "KPA/WEUPL/H-F": "Women?",
 "SHE/H-PB/H-PB/WHEPB/H-F/AE": "she--when?'",
@@ -1026,9 +1026,9 @@
 "PREPB/KPA*/TPR": "(From",
 "W*EUL/TP-PL": "Will.",
 "PWHRET/KR-GS/KPA*/T": "*\"It",
-"TK-R/KR-GS/KPA*/AS": "--\"As",
-"TK-R/KR-GS/KPA*/TPHOT": "--\"Not",
-"TK-R/KR-GS/KPA*/WHA": "--\"What",
+"H-PB/H-PB/KR-GS/KPA*/AS": "--\"As",
+"H-PB/H-PB/KR-GS/KPA*/TPHOT": "--\"Not",
+"H-PB/H-PB/KR-GS/KPA*/WHA": "--\"What",
 "KPA/AUL/STPH-FPLT": "All:",
 "THEPB/KW-BG": "then,",
 "SUFP/H-F": "such?",
@@ -1241,7 +1241,7 @@
 "KW-BG": ",",
 "KPA/PHAED": "Made",
 "TKPWRAET/xxx": "great…",
-"TK-R/KR-GS/KPA*/SHE": "--\"She",
+"H-PB/H-PB/KR-GS/KPA*/SHE": "--\"She",
 "SHE/H-PB/H-PB/AS": "she--as",
 "R/H-F": "are?",
 "U/H-PB/H-PB/WHO": "you--who",
@@ -1280,8 +1280,8 @@
 "US/TP-PL/KR-GS": "us.\"",
 "SED/SKHRAPL/KR-GS": "said!\"",
 "A*E/KR-GS/KPA*/WHA": "'\"What",
-"TK-R/KR-GS/W*EUL": "--\"Will",
-"PH*PBS/H-PB/KPA*/SHE": "--She",
+"H-PB/H-PB/KR-GS/W*EUL": "--\"Will",
+"H-PB/H-PB/KPA*/SHE": "--She",
 "TP-PL/KPA*/THA": ".That",
 "SHO/H-F": "should?",
 "T/H-PB/H-PB/TPHO/SKHRAPL": "it--no!",
@@ -1293,8 +1293,8 @@
 "KW-GS/AE/KPA*/THA": "\"'That",
 "HREUL/KW-BG": "little,",
 "PW-PB/H-PB/H-PB/H-F/KR-GS": "been--?\"",
-"PH*PBS/H-PB/KPA*/TPHOU/KW-BG": "--Now,",
-"PH*PBS/H-PB/KPA*/THR": "--There",
+"H-PB/H-PB/KPA*/TPHOU/KW-BG": "--Now,",
+"H-PB/H-PB/KPA*/THR": "--There",
 "PHAED/H-PB/H-PB/WHA/H-F": "made--what?",
 "TO/KW-BG": "to,",
 "WEUPL/KW-BG": "women,",
@@ -1303,7 +1303,7 @@
 "HERS/SKHRAPL": "hers!",
 "KPA/WEUPL": "Women",
 "PHR-FPLT": "Mr.",
-"PH*PBS/H-PB/H-PB/TP-PL": "---.",
+"H-PB/H-PB/H-PB/P-P": "---.",
 "A*E/KPA*/WHO/KW-BG": "'Who,",
 "PW-PB/H-F/KR-GS": "been?\"",
 "SOPL/H-F/HR-PS/KR-GS": "some?...\"",
@@ -1317,11 +1317,11 @@
 "T/H-PB/H-PB/WHA": "it--what",
 "WEU/H-F/AE": "which?'",
 "HREUL/STPH*FPLT": "little;",
-"PH*PBS/H-PB/SKHRAPL/KR-GS": "--!\"",
+"H-PB/H-PB/SKHRAPL/KR-GS": "--!\"",
 "HE/STPH*FPLT": "he;",
 "SO/STPH*FPLT": "so;",
 "HREUL/H-PB/H-PB/TPHOT": "little--not",
-"PH*PBS/H-PB/KPA*/WE": "--We",
+"H-PB/H-PB/KPA*/WE": "--We",
 "U/H-PB/H-PB/WHA": "you--what",
 "THR/H-F/HR-PS": "there?...",
 "T/H-PB/H-PB/OEFR": "it--over",
